--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
     "concurrently": "^8.2.2",
